--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,16 +5,10 @@
     *{ color: $clr-light; }
     &__wrapper{
         h4{ font-weight: 500; }
-        *{ font-size: clamp(1.5rem, 6vw, 2rem); }
+        *{ font-size: clamp(1.5rem, 3vw, 2rem); }
     }
-    &__links{
-        flex-wrap: wrap;
-        @include mediaQueryMxW(505px){
-            justify-content: center;
-        }
-    }
+    &__links{ @include mediaQueryMxW(505px){ justify-content: center; } }
     &__box{
-        text-align: left;
         min-width: 10rem;
         max-width: 30rem;
         @include mediaQueryMxW(505px){
@@ -25,27 +19,28 @@
         .logo{
             font-size: 3rem;
             transform:scale(1.5,1.25) translateX(-5.5rem);
-            @include mediaQueryMxW(505px){
-                transform:scale(1.5,1.25) translateX(0rem);
-            }
+            @include mediaQueryMxW(505px){ transform:scale(1.5,1.25) translateX(0rem); }
         }
         ul{
             li{
+                text-wrap: wrap;
                 i{ padding-right: 1rem; }
                 img{
                     min-width: 16rem;
                     @include imgCover(100%, 16rem);
+                    @include mediaQueryMxW{ min-width: unset; }
                 }
+                @include mediaQueryMxW{ flex-direction: column; }
             }
         }
     }
     &__bottom{
         border-top: 1px solid $clr-light;
-        font-size: inherit;
         @include mediaQueryMxW{
             flex-direction: column;
             align-items: center;
             gap: 0;
+            font-size: clamp(1.2rem, 3vw, 1.6rem);
         }
     }
 }
